--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.freestylemeeting">
+    package="com.example.freestylemeeting" >
 
     <application
         android:allowBackup="true"
@@ -8,9 +8,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FreestyleMeeting">
-        <activity android:name=".HomeActivity"></activity>
-        <activity android:name=".authActivity">
+        android:theme="@style/Theme.FreestyleMeeting" >
+        <activity android:name=".ListaPistaActivity" >
+        </activity>
+        <activity android:name=".TrainingActivity" />
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".authActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
