Funciona el Navigation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FreestyleMeeting">
-        <activity android:name=".HomeActivity"></activity>
-        <activity android:name=".authActivity">
+        <activity
+            android:name=".NavegationDrawerActivity"
+            android:label="@string/title_activity_navegation_drawer"
+            android:theme="@style/Theme.FreestyleMeeting.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
