--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.freestylemeeting" >
+    package="com.example.freestylemeeting">
 
     <application
         android:allowBackup="true"
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FreestyleMeeting">
+        <activity android:name=".enterpriseRegister"></activity>
         <activity android:name=".authActivity" />
         <activity android:name=".CrearGruposActivity" />
         <activity android:name=".GroupActivity" />
@@ -21,7 +22,8 @@
             android:theme="@style/Theme.FreestyleMeeting.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER"/>
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".PistaActivity" />
