--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,23 @@
         android:roundIcon="@mipmap/logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FreestyleMeeting">
-        <activity android:name=".pistaActivityEnterprise"></activity>
+        <activity android:name=".StarterActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ListPistasActivity" />
+        <activity android:name=".pistaActivityEnterprise" />
         <activity android:name=".enterpriseRegister" />
         <activity android:name=".SelectEstacionActivity" />
-        <activity android:name=".authActivity" />
+        <activity android:name=".authActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".CrearGruposActivity" />
         <activity android:name=".GroupActivity" />
         <activity android:name=".HomeActivity" />
@@ -21,13 +34,7 @@
         <activity
             android:name=".NavegationDrawerActivity"
             android:label="@string/title_activity_navegation_drawer"
-            android:theme="@style/Theme.FreestyleMeeting.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/Theme.FreestyleMeeting.NoActionBar"></activity>
         <activity android:name=".PistaActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".ReservarMaterialActivity" />
