Arreglado manifest 2 apps

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,21 +20,13 @@
         <activity android:name=".pistaActivityEnterprise" />
         <activity android:name=".enterpriseRegister" />
         <activity android:name=".SelectEstacionActivity" />
-        <activity android:name=".authActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".authActivity"/>
         <activity android:name=".CrearGruposActivity" />
         <activity android:name=".GroupActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".ListaPistaActivity" />
         <activity android:name=".MyHome" />
-        <activity
-            android:name=".NavegationDrawerActivity"
-            android:label="@string/title_activity_navegation_drawer"
-            android:theme="@style/Theme.FreestyleMeeting.NoActionBar"></activity>
+        <activity android:name=".NavegationDrawerActivity" />
         <activity android:name=".PistaActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".ReservarMaterialActivity" />
