--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         <activity android:name=".StarterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -26,7 +25,11 @@
         <activity android:name=".HomeActivity" />
         <activity android:name=".ListaPistaActivity" />
         <activity android:name=".MyHome" />
-        <activity android:name=".NavegationDrawerActivity" />
+        <activity
+            android:name=".NavegationDrawerActivity"
+            android:label="@string/title_activity_navegation_drawer"
+            android:theme="@style/Theme.FreestyleMeeting.NoActionBar">
+        </activity>
         <activity android:name=".PistaActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".ReservarMaterialActivity" />
