--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,34 +12,68 @@
         android:roundIcon="@mipmap/logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FreestyleMeeting">
-        <activity android:name=".EditPistaActivity" android:screenOrientation="portrait"></activity>
-        <activity android:name=".CreatePistaActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".StarterActivity" android:screenOrientation="portrait">
+        <activity
+            android:name=".EditPistaActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".CreatePistaActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".StarterActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ListPistasActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".pistaActivityEnterprise" android:screenOrientation="portrait"/>
-        <activity android:name=".enterpriseRegister" android:screenOrientation="portrait"/>
-        <activity android:name=".SelectEstacionActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".authActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".CrearGruposActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".GroupActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".HomeActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".ListaPistaActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".MyHome" android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ListPistasActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".pistaActivityEnterprise"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".enterpriseRegister"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".SelectEstacionActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".authActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".CrearGruposActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".GroupActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".HomeActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ListaPistaActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MyHome"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".NavegationDrawerActivity"
             android:label="@string/title_activity_navegation_drawer"
-            android:theme="@style/Theme.FreestyleMeeting.NoActionBar"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".PistaActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".RegisterActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".ReservarMaterialActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".TrainingActivity" android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.FreestyleMeeting.NoActionBar" />
+        <activity
+            android:name=".PistaActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".RegisterActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ReservarMaterialActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".TrainingActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
