Añadida opcion de mis grupos, ver participantes y borrar grupo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,9 @@
         <activity
             android:name=".TrainingActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ListaParticipantes"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
