--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,6 +81,9 @@
         <activity
             android:name=".ListaParticipantes"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ListMisReservasEstacion"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
